--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -36,6 +36,11 @@ ul {
 
 
 }
+
+#logoColour {
+    color: antiquewhite;
+     
+ }
   
 li {
     display: inline-block;
@@ -116,3 +121,65 @@ li {
 
 }
 
+.product {
+    margin: 10px 10px 0px 0px;
+    width: 234px;
+    background-color: white;
+    float: left;
+}
+
+.description {
+    text-align: center; 
+    font-size: 20px; 
+    font-weight: bold;
+    color: #333; 
+    padding-top: 20px; 
+    height: 120px;
+    position: relative;
+}
+
+.price {
+    color: rgb(204,51,255); 
+    position: absolute; 
+    bottom: 20px; 
+    width: 234px;
+}
+
+.container {
+    width of 1000px.
+    margin-left: auto; 
+    margin-right: auto;
+}
+
+.labelOrder {
+    margin: -75px 10px 0 0;
+    padding-top: 12px;
+    width: 258px;
+    height: 460px;
+    background-color: #ccc;
+    float: left;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+}
+
+#order {
+    height: 376px;
+    float: none;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#orderDescription {
+    font-size: 16px;
+    height: 40px;
+}
+
+form { 
+background-color: #ccc
+width: 998px
+clear: both; 
+padding: 20px;
+position: relative; 
+top: 20px;
