--- a/Final Project/firewood.css
+++ b/Final Project/firewood.css
@@ -167,6 +167,7 @@ h1{
 }
 
 h2{
+    colour: white;
     text-align: center;
 }
 
@@ -208,6 +209,7 @@ video{
 }
 
 .container h2{
+    colour: white;
     text-align: center;
     padding-bottom: 10px;
 }
@@ -225,6 +227,7 @@ video{
     align-items: left;
     justify-content: center;
     height: 400px;
+    colour: white;
 
 }
  #button{
