--- a/Final Project/firewood.css
+++ b/Final Project/firewood.css
@@ -158,7 +158,7 @@ li {
 h1{
   
     top: 44%;
-    text-align: left;
+    text-align: top;
     color:white;
     font-size: 500%;
     width: 100%;
