--- a/Final Project/firewood.css
+++ b/Final Project/firewood.css
@@ -156,7 +156,13 @@ li {
 }
 
 h1{
-  
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
     top: 44%;
     text-align: top;
     color:white;
